--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,1 @@
-@import "./app/styles/theme.css";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./app/styles/tailwind.css";
